[package]
name = "init-data-rust"
version = "0.1.1"
edition = "2021"
description = "This library is a Rust port of init-data-golang"
license = "MIT"
keywords = ["telegram", "tma", "telegram-mini-apps", "init-data"]
categories = ["web-programming"]
readme = "readme.md"


[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
thiserror = "2.0.3"
url = "2.5.4"
